--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -243,24 +243,24 @@ data:
     \         domain: input_datetime\n    custom_s4_start:\n      name: (Optional)
     Night start (time-only)\n      default:\n      selector:\n        entity:\n          domain:
     input_datetime\n\n    # ---- Optional scene cycle memory helper\n    scene_cycle_helper:\n
-    \     name: (Optional) Scene cycle helper (input_select)\n      description: Stores
-    the CURRENT slot; cycles morning→day→evening→night\n      default:\n      selector:\n
-    \       entity:\n          domain: input_select\n\n    # ---- Optional brightness
-    helpers\n    brightness_step_helper:\n      name: (Optional) Brightness step helper
-    (input_number, %)\n      description: \"e.g. input_number.<room>_brightness_step_pct\"\n
+    \     name: (Optional) Scene cycle helper (input_select)\n      description: \"Stores
+    the CURRENT slot; cycles morning→day→evening→night. Defaults to input_select.<room_key>_scene_cycle\"\n
+    \     default: \"\"\n      selector:\n        entity:\n          domain: input_select\n\n
+    \   # ---- Optional brightness helpers\n    brightness_step_helper:\n      name:
+    (Optional) Brightness step helper (input_number, %)\n      description: \"e.g.
+    input_number.<room>_brightness_step_pct\"\n      default:\n      selector:\n        entity:\n
+    \         domain: input_number\n    min_brightness_helper:\n      name: (Optional)
+    Min brightness helper (input_number, %)\n      description: \"e.g. input_number.<room>_min_brightness_pct\"\n
     \     default:\n      selector:\n        entity:\n          domain: input_number\n
-    \   min_brightness_helper:\n      name: (Optional) Min brightness helper (input_number,
-    %)\n      description: \"e.g. input_number.<room>_min_brightness_pct\"\n      default:\n
-    \     selector:\n        entity:\n          domain: input_number\n    max_brightness_helper:\n
-    \     name: (Optional) Max brightness helper (input_number, %)\n      description:
-    \"e.g. input_number.<room>_max_brightness_pct\"\n      default:\n      selector:\n
-    \       entity:\n          domain: input_number\n\n    # ---- Static brightness
-    fallback values\n    brightness_step_pct:\n      name: Fallback brightness step
-    (%)\n      default: 10\n      selector:\n        number:\n          min: 1\n          max:
-    50\n          unit_of_measurement: \"%\"\n          mode: slider\n\n    # ----
-    Optional per-button override helpers\n    btn1_short_action_helper:\n      name:
-    (Optional) Button 1 Short action (input_select)\n      default:\n      selector:\n
-    \       entity:\n          domain: input_select\n    btn1_long_action_helper:\n
+    \   max_brightness_helper:\n      name: (Optional) Max brightness helper (input_number,
+    %)\n      description: \"e.g. input_number.<room>_max_brightness_pct\"\n      default:\n
+    \     selector:\n        entity:\n          domain: input_number\n\n    # ----
+    Static brightness fallback values\n    brightness_step_pct:\n      name: Fallback
+    brightness step (%)\n      default: 10\n      selector:\n        number:\n          min:
+    1\n          max: 50\n          unit_of_measurement: \"%\"\n          mode: slider\n\n
+    \   # ---- Optional per-button override helpers\n    btn1_short_action_helper:\n
+    \     name: (Optional) Button 1 Short action (input_select)\n      default:\n
+    \     selector:\n        entity:\n          domain: input_select\n    btn1_long_action_helper:\n
     \     name: (Optional) Button 1 Long action (input_select)\n      default:\n      selector:\n
     \       entity:\n          domain: input_select\n    btn2_short_action_helper:\n
     \     name: (Optional) Button 2 Short action (input_select)\n      default:\n
@@ -284,39 +284,41 @@ data:
     !input btn4_long_action_helper\n  \n  brightness_step_helper: !input brightness_step_helper\n
     \ min_brightness_helper: !input min_brightness_helper\n  max_brightness_helper:
     !input max_brightness_helper\n  brightness_step_pct: !input brightness_step_pct\n
-    \ \n  scene_cycle_helper: !input scene_cycle_helper\n  custom_schedule_enabled:
-    !input custom_schedule_enabled\n  custom_s1_start: !input custom_s1_start\n  custom_s2_start:
-    !input custom_s2_start\n  custom_s3_start: !input custom_s3_start\n  custom_s4_start:
-    !input custom_s4_start\n  \n  # materialize inputs so we can reference them in
-    templates/logs\n  room_key_input: !input room_key\n  target_lights_input: !input
-    target_lights\n\n  custom_schedule_enabled_input: !input custom_schedule_enabled\n
-    \ custom_s1_start_input: !input custom_s1_start\n  custom_s2_start_input: !input
-    custom_s2_start\n  custom_s3_start_input: !input custom_s3_start\n  custom_s4_start_input:
-    !input custom_s4_start\n\n  # ---- Resolve per-button actions (helper overrides
-    if provided; else defaults)\n  btn1_short_action: >-\n    {{ states(btn1_short_action_helper)
-    if btn1_short_action_helper else 'toggle' }}\n  btn1_long_action: >-\n    {{ states(btn1_long_action_helper)
-    if btn1_long_action_helper else 'all_off' }}\n\n  btn2_short_action: >-\n    {{
-    states(btn2_short_action_helper) if btn2_short_action_helper else 'brightness_up'
-    }}\n  btn2_long_action: >-\n    {{ states(btn2_long_action_helper) if btn2_long_action_helper
-    else 'brightness_max' }}\n\n  btn3_short_action: >-\n    {{ states(btn3_short_action_helper)
-    if btn3_short_action_helper else 'brightness_down' }}\n  btn3_long_action: >-\n
-    \   {{ states(btn3_long_action_helper) if btn3_long_action_helper else 'brightness_min'
-    }}\n\n  btn4_short_action: >-\n    {{ states(btn4_short_action_helper) if btn4_short_action_helper
-    else 'scene_cycle' }}\n  btn4_long_action: >-\n    {{ states(btn4_long_action_helper)
-    if btn4_long_action_helper else 'default_scene' }}\n\n  # ---- Resolve brightness
-    from helpers, with safe fallbacks\n  _step_raw: >-\n    {% if brightness_step_helper
-    %}{{ states(brightness_step_helper) }}{% else %}{{ '' }}{% endif %}\n  _min_raw:
-    >-\n    {% if min_brightness_helper %}{{ states(min_brightness_helper) }}{% else
-    %}{{ '' }}{% endif %}\n  _max_raw: >-\n    {% if max_brightness_helper %}{{ states(max_brightness_helper)
-    }}{% else %}{{ '' }}{% endif %}\n\n  brightness_step_pct_resolved: >-\n    {%
-    set v = _step_raw %}\n    {{ (v | int(10)) if v not in ['unknown','unavailable','',
-    None] else (brightness_step_pct | int) }}\n\n  min_brightness_pct_resolved: >-\n
-    \   {% set v = _min_raw %}\n    {{ (v | int(1)) if v not in ['unknown','unavailable','',
-    None] else 1 }}\n\n  max_brightness_pct_resolved: >-\n    {% set v = _max_raw
-    %}\n    {{ (v | int(100)) if v not in ['unknown','unavailable','', None] else
-    100 }}\n\n  # ---- Time window / slot calc\n  default_s1: \"06:00:00\"\n  default_s2:
-    \"09:00:00\"\n  default_s3: \"17:00:00\"\n  default_s4: \"22:00:00\"\n\n  use_custom:
-    >-\n    {{ custom_schedule_enabled_input is not none and\n       custom_schedule_enabled_input
+    \ \n  scene_cycle_helper_input: !input scene_cycle_helper\n  room_key: !input
+    room_key\n  scene_cycle_helper: >-\n    {% if scene_cycle_helper_input and scene_cycle_helper_input
+    != '' %}\n      {{ scene_cycle_helper_input }}\n    {% else %}\n      input_select.{{
+    room_key }}_scene_cycle\n    {% endif %}\n  custom_schedule_enabled: !input custom_schedule_enabled\n
+    \ custom_s1_start: !input custom_s1_start\n  custom_s2_start: !input custom_s2_start\n
+    \ custom_s3_start: !input custom_s3_start\n  custom_s4_start: !input custom_s4_start\n
+    \ \n  # materialize inputs so we can reference them in templates/logs\n  room_key_input:
+    !input room_key\n  target_lights_input: !input target_lights\n\n  custom_schedule_enabled_input:
+    !input custom_schedule_enabled\n  custom_s1_start_input: !input custom_s1_start\n
+    \ custom_s2_start_input: !input custom_s2_start\n  custom_s3_start_input: !input
+    custom_s3_start\n  custom_s4_start_input: !input custom_s4_start\n\n  # ---- Resolve
+    per-button actions (helper overrides if provided; else defaults)\n  btn1_short_action:
+    >-\n    {{ states(btn1_short_action_helper) if btn1_short_action_helper else 'toggle'
+    }}\n  btn1_long_action: >-\n    {{ states(btn1_long_action_helper) if btn1_long_action_helper
+    else 'all_off' }}\n\n  btn2_short_action: >-\n    {{ states(btn2_short_action_helper)
+    if btn2_short_action_helper else 'brightness_up' }}\n  btn2_long_action: >-\n
+    \   {{ states(btn2_long_action_helper) if btn2_long_action_helper else 'brightness_max'
+    }}\n\n  btn3_short_action: >-\n    {{ states(btn3_short_action_helper) if btn3_short_action_helper
+    else 'brightness_down' }}\n  btn3_long_action: >-\n    {{ states(btn3_long_action_helper)
+    if btn3_long_action_helper else 'brightness_min' }}\n\n  btn4_short_action: >-\n
+    \   {{ states(btn4_short_action_helper) if btn4_short_action_helper else 'scene_cycle'
+    }}\n  btn4_long_action: >-\n    {{ states(btn4_long_action_helper) if btn4_long_action_helper
+    else 'default_scene' }}\n\n  # ---- Resolve brightness from helpers, with safe
+    fallbacks\n  _step_raw: >-\n    {% if brightness_step_helper %}{{ states(brightness_step_helper)
+    }}{% else %}{{ '' }}{% endif %}\n  _min_raw: >-\n    {% if min_brightness_helper
+    %}{{ states(min_brightness_helper) }}{% else %}{{ '' }}{% endif %}\n  _max_raw:
+    >-\n    {% if max_brightness_helper %}{{ states(max_brightness_helper) }}{% else
+    %}{{ '' }}{% endif %}\n\n  brightness_step_pct_resolved: >-\n    {% set v = _step_raw
+    %}\n    {{ (v | int(10)) if v not in ['unknown','unavailable','', None] else (brightness_step_pct
+    | int) }}\n\n  min_brightness_pct_resolved: >-\n    {% set v = _min_raw %}\n    {{
+    (v | int(1)) if v not in ['unknown','unavailable','', None] else 1 }}\n\n  max_brightness_pct_resolved:
+    >-\n    {% set v = _max_raw %}\n    {{ (v | int(100)) if v not in ['unknown','unavailable','',
+    None] else 100 }}\n\n  # ---- Time window / slot calc\n  default_s1: \"06:00:00\"\n
+    \ default_s2: \"09:00:00\"\n  default_s3: \"17:00:00\"\n  default_s4: \"22:00:00\"\n\n
+    \ use_custom: >-\n    {{ custom_schedule_enabled_input is not none and\n       custom_schedule_enabled_input
     != '' and\n       is_state(custom_schedule_enabled_input, 'on') }}\n\n  s1_str:
     >-\n    {% set v = states(custom_s1_start_input) if use_custom else default_s1
     %}\n    {% if v in ['unknown','unavailable',''] %}{{ default_s1 }}{% else %}{{
@@ -399,7 +401,10 @@ data:
     endif %}\n              idx: \"{{ order.index(cur_slot) if cur_slot in order else
     0 }}\"\n              next_slot: \"{{ order[(idx + 1) % order | length] }}\"\n
     \             scene_to_activate: \"scene.{{ room_key_input }}_{{ next_slot }}\"\n
-    \         - if:\n              - condition: template\n                value_template:
+    \         - service: logbook.log\n            data:\n              name: \"scene_cycle
+    DEBUG\"\n              message: >-\n                helper={{ scene_cycle_helper
+    }}, cur_slot={{ cur_slot }}, \n                next_slot={{ next_slot }}, scene={{
+    scene_to_activate }}\n          - if:\n              - condition: template\n                value_template:
     \"{{ scene_cycle_helper is not none and scene_cycle_helper != '' }}\"\n            then:\n
     \             - service: input_select.select_option\n                target:\n
     \                 entity_id: \"{{ scene_cycle_helper }}\"\n                data:\n
