--- a/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
+++ b/gitops/apps/home-assistant/automations/alex_reolink_pet_detect_snapshot.yaml
@@ -35,10 +35,10 @@ actions:
     data:
       filename: "{{ path }}"
   - action: input_text.set_value
-    target: { entity_id: input_text.event_image_location_text }
+    target: { entity_id: input_text.event_image_location }
     data: { value: "{{ slug }}" }
   - action: input_text.set_value
-    target: { entity_id: input_text.event_image_timestamp_text }
+    target: { entity_id: input_text.event_image_timestamp }
     data: { value: "{{ timestamp }}" }
   - action: notify.mobile_app_pixel_9_pro_xl
     data:
